--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta http-equive="cache-control" content="no-cache" />
+  <meta http-equiv='expires' content='0'>
   <title>React App</title>
 </head>
 
