--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#2a00ff">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>CMS Dashboard | Wellcome</title>
   <meta http-equive="cache-control" content="no-cache" />
   <meta http-equiv='expires' content='0'>
-  <title>React App</title>
 </head>
 
 <body>
